--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
-    <title>React App</title>
+    <title>Meal Planner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
